--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,13 @@ img {
 }
 
 .logoText {
+    width: 400px;
     opacity: 0;
     text-align: center;
     font-stretch: expanded;
     font-size: x-large;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Playfair Display', 'Times New Roman', Times, serif;
+    letter-spacing: 2.5px;
     animation: fadeUp ease-in-out 1.2s;
     animation-fill-mode: forwards;
     -webkit-animation-fill-mode: forwards;
